--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,5 +1,14 @@
 # https://www.playframework.com/documentation/latest/Configuration
-play.filters.hosts {
-  # Allow requests to example.com, its subdomains, and localhost:9000.
-  allowed = ["0.0.0.0:9000"]
-}
+//play.filters.hosts {
+//  allowed = ["0.0.0.0:9000"]
+//}
+application.name="CoordCMS"
+
+play.modules.enabled += "bootstrap.EventDatabaseModule"
+
+slick.dbs.default.profile="slick.jdbc.H2Profile$"
+slick.dbs.default.db.driver="org.h2.Driver"
+//slick.dbs.default.db.url="jdbc:h2:~/play;DB_CLOSE_DELAY=-1;MV_STORE=FALSE;MVCC=FALSE"
+slick.dbs.default.db.url="jdbc:h2:mem:play;DB_CLOSE_DELAY=-1"
+slick.dbs.default.db.user=sa
+slick.dbs.default.db.password=""
