Fix inserting events

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,7 +1,7 @@
 # https://www.playframework.com/documentation/latest/Configuration
-//play.filters.hosts {
-//  allowed = ["0.0.0.0:9000"]
-//}
+play.filters.hosts {
+  allowed = ["0.0.0.0:9000"]
+}
 application.name="CoordCMS"
 
 play.modules.enabled += "bootstrap.EventDatabaseModule"
