Add example angular app

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,7 +1,17 @@
 # https://www.playframework.com/documentation/latest/Configuration
+play.http.filters=Filters
+
 play.filters.hosts {
   allowed = ["0.0.0.0:9000"]
 }
+
+play.filters.cors {
+  pathPrefixes = ["/"]
+  allowedOrigins = null
+  allowedHttpMethods = ["GET"]
+  allowedHttpHeaders = null
+}
+
 application.name="CoordCMS"
 
 play.modules.enabled += "bootstrap.EventDatabaseModule"
